[package]
name = "audio-converter"
version = "0.1.0"
authors = ["m.zhuravlev <maks723@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube-url-unwrap = { git = "https://github.com/ZhuravlevMaksim/youtube-url-unwrap" }