[package]
name = "audio-converter"
version = "0.2.0"
authors = ["m.zhuravlev <maks723@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube-url-unwrap = { git = "https://github.com/ZhuravlevMaksim/youtube-url-unwrap" }
tokio = "1"
reqwest = "0.11.3"
tempfile = "3.2.0"
byteorder = "1.4.3"
serde_json = "1.0.59"